--- a/ngAuction/angular.json
+++ b/ngAuction/angular.json
@@ -23,10 +23,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              {
+                "input": "./node_modules/bootstrap/dist/css/bootstrap.css"
+              }
             ],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js", "node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -61,7 +65,8 @@
                 "src/styles.css",
                 "node_modules/bootstrap/dist/css/bootstrap.min.css"
               ],
-              "scripts": ["node_modules/jquery/dist/jquery.min.js", "node_modules/bootstrap/dist/js/bootstrap.min.js"]  
+              "scripts": [
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -96,10 +101,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
-            "scripts": ["../node_modules/jquery/dist/jquery.min.js", "../node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": [
+            ]
           }
         }
       }
